# dirtferret

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  PROGRESS.md  README.md  flake.nix
core/: CMakeLists.txt  main.cc
core/engine/: app.cc  app.h  client.cc  client.h  dom_bridge.cc  dom_bridge.h  engine.cc  engine.h  input.cc  input.h  region.h  renderer.cc  renderer.h
core/lua/: runtime.cc  runtime.h
core/shm/: frame_pool.cc  frame_pool.h
dirtferret/practice/: buffer_manager.cc  runtime_exports.cc
dirtferret/src/: CMakeLists.txt  backend_main.cc
dirtferret/src/api/: command.h  dispatcher.h  query.h  types.h
dirtferret/src/backend/: app.h  client.h  engine.cc  engine.h  frame_capture.h  minimal_renderer.cc
dirtferret/src/frontend/: kitty_renderer.cc  terminal.cc
dirtferret/src/ipc/: message.h
dirtferret/src/plugin/: lua_host.h
lua/dirtferret/: defaults.lua  init.lua  keymap.lua
nix/: cef-binary.nix
schema/: core.capnp  types.capnp
scripts/: build-cef.sh  frontend.sh  run.sh
src/: 2q  CMakeLists.txt  backend_main.cc  frontend_main.cc  main.cc
src/api/: dispatcher.cc  dispatcher.h  exports.h  types.h
src/backend/: app.cc  app.h  client.cc  client.h  engine.cc  engine.h  minimal_renderer.h
src/frontend/: input.h  kitty_renderer.cc  kitty_renderer.h  renderer.h  terminal.cc  terminal.h
src/ipc/: serialization.cc  serialization.h  transport.h  unix_socket_transport.cc  unix_socket_transport.h
src/plugin/: lua_host.cc  plugin_host.h
src/tests/: test_exports.cc  test_frame_wire.cc  test_kitty_renderer.cc  test_serialization.cc  test_terminal.cc
tests/core/: CMakeLists.txt  cursor_algo_stub.cc  test_cursor.cc  test_input.cc  test_region.cc  test_schema.cc  test_shm.cc
tui/: Cargo.toml  build.rs
tui/src/: app.rs  buffer.rs  compositor.rs  input.rs  layout.rs  main.rs  mode.rs  mux.rs  region.rs  rpc.rs  shm.rs  ui.rs  viewport.rs
