[package]
name = "dirtferret-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal frontend for dirtferret browser"

[dependencies]
# Terminal UI
crossterm = { version = "0.28", features = ["event-stream"] }
base64 = "0.22.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["io"] }

# Cap'n Proto
capnp = "0.20"
capnp-rpc = "0.20"

# Error handling
anyhow = "1"

# Shared memory reading
libc = { version = "0.2" }

# Pixel conversion
bytemuck = "1"

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "dirtferret-tui"
path = "src/main.rs"
